# uiua-doc-gen

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml  lib.ua
.github/workflows/: release.yml
design/: index.html  script.js  style.css
extractor/: Cargo.toml
extractor/src/: main.rs
extractor/testlib/: lib.ua  mod.ua  mod2.ua
generator/: main.ts
src/: extractor.rs  formatter.rs  generator.rs  main.rs  summarizer.rs
testlib/: lib.ua
