[package]
name = "uiua-doc-gen"
version = "0.16.2" # Major/minor version matches supported version of Uiua, patch is for the generator itself
edition = "2021"
description = "Documentation generator for Uiua libraries"
license = "MIT"
repository = "https://github.com/ekgame/uiua-doc-gen"
readme = "README.md"
keywords = ["cli", "documentation", "generator", "uiua"]

[dependencies]
uiua = "0.16.0"
clap = "4.5.20"
thiserror = "2.0.3"
same-file = "1.0.6"
leptos = { version = "0.6.15", features = ["serde", "csr"] }
kuchiki = "0.8.1"
markdown = "1.0.0-alpha.21"
html5ever = "0.29.0"
markup5ever = "0.10.1"
rand = "0.8.5"
unicode-segmentation = "1.12.0"

[profile.dev]
opt-level = 1