[package]
name = "uiua-doc-gen"
version = "1.0.6+uiua-0.18.0-1"
edition = "2021"
description = "Documentation generator for Uiua libraries"
license = "MIT"
repository = "https://github.com/ekgame/uiua-doc-gen"
readme = "README.md"
keywords = ["cli", "documentation", "generator", "uiua"]

[dependencies]
uiua = "0.18.1"
clap = "4.5.20"
thiserror = "2.0.3"
same-file = "1.0.6"
leptos = { version = "0.6.15", features = ["serde", "csr"] }
kuchiki = "0.8.1"
pulldown-cmark = "0.13.0"
html5ever = "0.29.0"
markup5ever = "0.10.1"
rand = "0.8.5"
unicode-segmentation = "1.12.0"

[package.metadata.release]
tag-name = "v{{version}}+{{metadata}}"

[profile.dev]
opt-level = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
